<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KinderGarten</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    
    
    <string name="login">登陆</string>
    <string name="hint_username">邮箱/手机号</string>
    <string name="hint_password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="remember_password">记住密码</string>
    <string name="waiting">等待中...</string>
</resources>
